--- a/webapps/TMJRock/eg2.html
+++ b/webapps/TMJRock/eg2.html
@@ -4,20 +4,137 @@
 <head>
 <title>AJAX Examples</title>
 <script>
-function getDesignation()
+function $$$(cid){
+let element = document.getElementById(cid);
+if(!element) throw "Invalid id: "+cid;
+return new TMJRockElement(element);
+} //end of $$$ function
+
+function TMJRockElement(element)
 {
-var titleSpan = document.getElementById('title');
-titleSpan.innerHTML = "";
-var code = document.getElementById("code").value;
+this.element = element;
 
+this.fillComboBox = function(configurations){
+var designations = configurations.dataSource;
+
+var obj1;
+if(configurations.firstOption!=null)
+{
+obj1 = document.createElement("option");
+obj1.value = configurations.firstOption.value;
+obj1.text = configurations.firstOption.text;
+element.appendChild(obj1);
+}
+for(var i=0;i<designations.length;i++)
+{
+obj1 = document.createElement("option");
+obj1.value = designations[i][configurations.value]; // In Java we would've written - designations[i].(configurations.value);
+obj1.text = designations[i][configurations.text];
+element.appendChild(obj1);
+}
+}; //end of TMJRockElement fillComboBox().
+
+this.html = function(content)
+{
+if(typeof this.element.innerHTML=="string")
+{
+if((typeof content)=="string")
+{
+this.element.innerHTML=content;
+}
+return this.element.innerHTML;
+}
+return null;
+}
+
+this.value = function(content)
+{
+if(typeof this.element.value)
+{
+if((typeof content) == "string")
+{
+this.element.value = content;
+}
+return this.element.value;
+}
+return null;
+}
+
+
+
+} //end of TMJRockElement
+
+
+$$$.ajax = function(jsonObject)
+{
+if(!jsonObject["url"]) throw "url property is missing in call to ajax";
+let url = jsonObject["url"];
+if((typeof url)!="string") throw "url property should be of string type in call to ajax";
+
+let methodType = "GET"
+if(jsonObject["methodType"])
+{
+methodType = jsonObject["methodType"];
+if((typeof methodType)!="string") throw "methodType property should be of string type in call to ajax";
+methodType = methodType.toUpperCase();
+if(["GET","POST"].includes(methodType)==false) throw "methodType should be GET/POST in call to ajax";
+}
+
+let onSuccess=null;
+if(jsonObject["success"])
+{
+onSuccess = jsonObject["success"];
+if((typeof onSuccess)!="function") throw "success property should be a function in call to ajax";
+}
+
+let onFailure=null;
+if(jsonObject["failure"])
+{
+onFailure = jsonObject["failure"];
+if((typeof onFailure)!="function") throw "failure property should be a function in call to ajax";
+}
+
+if(methodType=="GET")
+{
 var xmlHttpRequest = new XMLHttpRequest();
-xmlHttpRequest.onreadystatechange = function() {
-
+xmlHttpRequest.onreadystatechange = function(){
 if(this.readyState==4)
 {
 if(this.status==200)
 {
 var responseData = this.responseText;
+if(onSuccess) onSuccess(responseData);
+}
+else
+{
+if(onFailure) onFailure();
+}
+}
+};
+requestUrl = url + "?code=" + encodeURI($$$("code").value());
+xmlHttpRequest.open(methodType,requestUrl,true);
+xmlHttpRequest.send();
+} //"GET" part ends here
+
+if(methodType=="POST")
+{
+}
+}//end of $$$.ajax function
+
+//TMJRock library code ends here
+
+function getDesignation()
+{
+
+var titleSpan = $$$("title");
+titleSpan.html("");
+var code = $$$("code").value();
+
+$$$.ajax({
+"url":"servletTwo",
+"data":{"code":code},
+"methodType":"GET",
+"success":function(responseData){
 if(responseData=="INVALID")
 {
 alert('Invalid designation code');
@@ -25,29 +142,27 @@ alert('Invalid designation code');
 else
 {
 var splits = responseData.split(",");
-titleSpan.innerHTML = splits[1];
+titleSpan.html(splits[1]);
 }
+},
+"failure":function(){
+alert('Some problem');
 }
-else
-{
-alert('some prob');
-}
-}
-};
+});
+} //end of getDesignations()
 
-var requestURL = "servletTwo?code=" + encodeURI(code);
-xmlHttpRequest.open('GET',requestURL,true);
-xmlHttpRequest.send();
-}
+
 </script>
 </head>
 
 <body>
 <h1> Example 2 </h2><br>
 Enter code <input type='text' id='code'>
-<button type='button' onclick='getDesignation()'> Get Designation </button> <br><br>
-Title: <span id='title'></span><br>
-
+<button type='button' onclick='getDesignation()'> 
+Get Designation 
+</button> <br><br>
+Title: <span id='title'></span>
+<br>
 <a href='/ajax2/index.html'>Home</a>
 </body>
 </html>
