--- a/webapps/TMJRock/eg3.html
+++ b/webapps/TMJRock/eg3.html
@@ -4,56 +4,185 @@
 <head>
 <title>AJAX Examples</title>
 <script>
-function saveEnquiry()
+function $$$(cid){
+let element = document.getElementById(cid);
+if(!element) throw "Invalid id: "+cid;
+return new TMJRockElement(element);
+} //end of $$$ function
+
+function TMJRockElement(element)
 {
-var firstName = document.getElementById("firstName").value;
-var lastName = document.getElementById("lastName").value;
-var age = document.getElementById("age").value;
+this.element = element;
 
-var customer = {
-"firstName":firstName,
-"lastName":lastName,
-"age":age
-};
+this.fillComboBox = function(configurations){
+var designations = configurations.dataSource;
 
-var whatever = document.getElementById("whatever");
-whatever.innerHTML="";
+var obj1;
+if(configurations.firstOption!=null)
+{
+obj1 = document.createElement("option");
+obj1.value = configurations.firstOption.value;
+obj1.text = configurations.firstOption.text;
+element.appendChild(obj1);
+}
+for(var i=0;i<designations.length;i++)
+{
+obj1 = document.createElement("option");
+obj1.value = designations[i][configurations.value]; // In Java we would've written - designations[i].(configurations.value);
+obj1.text = designations[i][configurations.text];
+element.appendChild(obj1);
+}
+}; //end of TMJRockElement fillComboBox().
 
+this.html = function(content)
+{
+if(typeof this.element.innerHTML=="string")
+{
+if((typeof content)=="string")
+{
+this.element.innerHTML=content;
+}
+return this.element.innerHTML;
+}
+return null;
+}
+
+this.value = function(content)
+{
+if(typeof this.element.value)
+{
+if((typeof content) == "string")
+{
+this.element.value = content;
+}
+return this.element.value;
+}
+return null;
+}
+
+
+
+} //end of TMJRockElement
+
+
+$$$.ajax = function(jsonObject)
+{
+if(!jsonObject["url"]) throw "url property is missing in call to ajax";
+let url = jsonObject["url"];
+if((typeof url)!="string") throw "url property should be of string type in call to ajax";
+
+let methodType = "GET"
+if(jsonObject["methodType"])
+{
+methodType = jsonObject["methodType"];
+if((typeof methodType)!="string") throw "methodType property should be of string type in call to ajax";
+methodType = methodType.toUpperCase();
+if(["GET","POST"].includes(methodType)==false) throw "methodType should be GET/POST in call to ajax";
+}
+
+let onSuccess=null;
+if(jsonObject["success"])
+{
+onSuccess = jsonObject["success"];
+if((typeof onSuccess)!="function") throw "success property should be a function in call to ajax";
+}
+
+let onFailure=null;
+if(jsonObject["failure"])
+{
+onFailure = jsonObject["failure"];
+if((typeof onFailure)!="function") throw "failure property should be a function in call to ajax";
+}
+
+if(methodType=="GET")
+{
 var xmlHttpRequest = new XMLHttpRequest();
-xmlHttpRequest.onreadystatechange = function() {
+xmlHttpRequest.onreadystatechange = function(){
 if(this.readyState==4)
 {
 if(this.status==200)
 {
-var customer = JSON.parse(this.responseText);
-var a = "First name: " + customer.firstName + "<br>";
-a = a + "Last name: " + customer.lastName + "<br>";
-a = a + "Age: " + customer.age;
-whatever.innerHTML = a;
+var responseData = this.responseText;
+if(onSuccess) onSuccess(responseData);
 }
 else
 {
-alert('some prob');
+if(onFailure) onFailure();
 }
 }
+};
+
+
+
+if(jsonObject["data"])
+{
+let jsonData = jsonObject["data"];
+let queryString = "";
+let qsName;
+let qsValue;
+let xx=0;
+for(k in jsonData)
+{
+if(xx==0) queryString = "?";	//will run first time
+if(xx>0) queryString += "&";	//Won't run first time. Then will run everytime.
+xx++;
+qsName = encodeURI(k);
+qsValue = encodeURI(jsonData[k]);
+queryString = queryString + qsName + "=" + qsValue;
 }
-xmlHttpRequest.open('POST','servletThree',true);
-xmlHttpRequest.setRequestHeader("Content-Type","application/json");
-xmlHttpRequest.send(JSON.stringify(customer));
+url+=queryString;
 }
+xmlHttpRequest.open(methodType,url,true);
+xmlHttpRequest.send();
+} //"GET" part ends here
+
+if(methodType=="POST")
+{
+}
+}//end of $$$.ajax function
+
+//TMJRock library code ends here
+
+function getDesignation()
+{
+
+var titleSpan = $$$("title");
+titleSpan.html("");
+var code = $$$("code").value();
+
+$$$.ajax({
+"url":"servletTwo",
+"data":{"code":code},
+"methodType":"GET",
+"success":function(responseData){
+if(responseData=="INVALID")
+{
+alert('Invalid designation code');
+}
+else
+{
+var splits = responseData.split(",");
+titleSpan.html(splits[1]);
+}
+},
+"failure":function(){
+alert('Some problem');
+}
+});
+} //end of getDesignations()
+
+
 </script>
 </head>
 
 <body>
-<h1> Example 3 </h2><br>
-Enter first name: <input type='text' id='firstName'><br>
-Enter last name: <input type='text' id='lastName'><br>
-Enter age: <input type='text' id='age'><br>
-
-<button type='button' onclick='saveEnquiry()'>Save</button> <br><br>
-
-<div id='whatever'></div>
-
+<h1> Example 2 </h2><br>
+Enter code <input type='text' id='code'>
+<button type='button' onclick='getDesignation()'> 
+Get Designation 
+</button> <br><br>
+Title: <span id='title'></span>
+<br>
 <a href='/ajax2/index.html'>Home</a>
 </body>
 </html>
